<resources>
    <string name="app_name">Hangman</string>
    <string name="label_ok">Ok</string>
    <string name="title_message">Info</string>
    <string name="category">Categoria:</string>
    <string name="new_game">Novo jogo</string>
    <string name="random">Aleatório</string>
    <string name="swap_imagem">Trocar a foto</string>
    <string name="sound">Som</string>
    <string name="settings">Configurações</string>
    <string name="vibrate">Vibração</string>
    <string name="reveal_word">Revelar Palavra</string>
    <string name="total_time">TotalTime</string>
    <string name="language">language</string>
    <string name="meaning">Significado:</string>
    <string name="history">Histórico</string>
    <string name="word">Palavra</string>
    <string name="previuosIcon"><![CDATA[<]]></string>
    <string name="heading">HEADING</string>
    <string name="loremIpsum">Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem sendo utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e os embaralhou para fazer um livro de modelos de tipos. Lorem Ipsum sobreviveu não só a cinco séculos</string>
    <string name="recordes">Recordes</string>
    <string name="limpar">Limpar</string>
    <string name="level">level</string>
    <string name="nivel">Nível: </string>
    <string name="tempo">Tempo: </string>
    <string name="challenge">DESAFIOS:</string>
    <string name="forcaComVoce">Que a FORCA esteja com você!!</string>
    <string name="ProofYouAreNotNoob">"Responda dentro do tempo antes que você seja enforcado!! Prove que você não é NOOB!"</string>

</resources>
