<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:autofit="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    android:weightSum="5">
    <RelativeLayout
        android:id="@+id/mGeneralData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:paddingRight="10dp"
        android:background="@color/colorButton">
        <TextView
            android:id="@+id/mCategoryLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:textColor="@color/colorText"
            android:layout_centerInParent="true"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/mClockImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:src="@drawable/ic_access_time_white_24dp"
            android:layout_toLeftOf="@+id/mGameCountdown"/>
        <TextView
            android:id="@+id/mGameCountdown"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="25dp"
            android:layout_centerInParent="true"
            android:layout_alignParentRight="true"
            android:textColor="@color/colorText"
            android:text="00"/>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/mGameContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="3">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/mHangImage"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/first"/>
            <TextView
                android:id="@+id/mWord"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:letterSpacing="0.5"
                android:textSize="32dp"
                android:gravity="center_horizontal|center_vertical"
                android:textColor="@color/colorText"
                android:text="@string/word"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/mEndGameContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.8"
        android:orientation="vertical"
        android:visibility="visible">
        <TextView
            android:id="@+id/mMeaning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="22dp"
            android:gravity="center_horizontal"
            android:textColor="@color/colorText"
            android:text="@string/meaning"
            android:layout_below="@+id/mWord" />
        <Button
            android:id="@+id/mNewGameButton"
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_game"
            android:layout_gravity="bottom|center_horizontal"
            android:onClick="startNewGame" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/mLettersContainer"
        android:layout_below="@+id/mWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.8"
        android:orientation="vertical"
        android:gravity="center_vertical|center_horizontal">
        <LinearLayout
            android:id="@+id/firstContainer"
            android:layout_below="@+id/mWord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">
            <Button
                android:id="@+id/mButtonA"
                android:layout_width="35dp"
                android:layout_height="44dp"
                android:text="A"
                android:onClick="letterPressed"/>
            <Button
                android:id="@+id/mButtonB"
                android:layout_width="35dp"
                android:layout_height="44dp"
                android:text="B"
                android:onClick="letterPressed"/>
            <Button
                android:id="@+id/mButtonC"
                android:layout_width="35dp"
                android:layout_height="44dp"
                android:text="C"
                android:onClick="letterPressed"/>
            <Button
                android:id="@+id/mButtonD"
                android:layout_width="35dp"
                android:layout_height="44dp"
                android:text="D"
                android:onClick="letterPressed"/>
            <Button
                android:id="@+id/mButtonE"
                android:layout_width="35dp"
                android:layout_height="44dp"
                android:text="E"
                android:onClick="letterPressed"/>

            <Button
                android:id="@+id/mButtonF"
                android:layout_width="35dp"
                android:layout_height="44dp"
                android:text="F"
                android:onClick="letterPressed"/>
            <Button
                android:id="@+id/mButtonG"
                android:layout_width="35dp"
                android:layout_height="44dp"
                android:text="G"
                android:onClick="letterPressed"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/secondContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/firstContainer"
            android:gravity="center_horizontal">
            <Button
                android:id="@+id/mButtonH"
                android:layout_width="35dp"
                android:layout_height="44dp"
                android:text="H"
                android:onClick="letterPressed"/>
            <Button
                android:id="@+id/mButtonI"
                android:layout_width="35dp"
                android:layout_height="44dp"
                android:text="I"
                android:onClick="letterPressed"/>
            <Button
                android:id="@+id/mButtonJ"
                android:layout_width="35dp"
                android:layout_height="44dp"
                android:text="J"
                android:onClick="letterPressed"/>
            <Button
                android:id="@+id/mButtonK"
                android:layout_width="35dp"
                android:layout_height="44dp"
                android:text="K"
                android:onClick="letterPressed"/>
            <Button
                android:id="@+id/mButtonL"
                android:layout_width="35dp"
                android:layout_height="44dp"
                android:text="L"
                android:onClick="letterPressed"/>
            <Button
                android:id="@+id/mButtonM"
                android:layout_width="35dp"
                android:layout_height="44dp"
                android:text="M"
                android:onClick="letterPressed"/>
            <Button
                android:id="@+id/mButtonN"
                android:layout_width="35dp"
                android:layout_height="44dp"
                android:text="N"
                android:onClick="letterPressed"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/thirdContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/secondContainer"
            android:gravity="center_horizontal">
            <Button
                android:id="@+id/mButtonO"
                android:layout_width="35dp"
                android:layout_height="44dp"
                android:text="O"
                android:onClick="letterPressed"/>
            <Button
                android:id="@+id/mButtonP"
                android:layout_width="35dp"
                android:layout_height="44dp"
                android:text="P"
                android:onClick="letterPressed"/>
            <Button
                android:id="@+id/mButtonQ"
                android:layout_width="35dp"
                android:layout_height="44dp"
                android:text="Q"
                android:onClick="letterPressed"/>
            <Button
                android:id="@+id/mButtonR"
                android:layout_width="35dp"
                android:layout_height="44dp"
                android:text="R"
                android:onClick="letterPressed"/>
            <Button
                android:id="@+id/mButtonS"
                android:layout_width="35dp"
                android:layout_height="44dp"
                android:text="S"
                android:onClick="letterPressed"/>
            <Button
                android:id="@+id/mButtonT"
                android:layout_width="35dp"
                android:layout_height="44dp"
                android:text="T"
                android:onClick="letterPressed"/>
            <Button
                android:id="@+id/mButtonU"
                android:layout_width="35dp"
                android:layout_height="44dp"
                android:text="U"
                android:onClick="letterPressed"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/thirdContainer"
            android:gravity="center_horizontal">
            <Button
                android:id="@+id/mButtonV"
                android:layout_width="35dp"
                android:layout_height="44dp"
                android:text="V"
                android:onClick="letterPressed"/>
            <Button
                android:id="@+id/mButtonW"
                android:layout_width="35dp"
                android:layout_height="44dp"
                android:text="W"
                android:onClick="letterPressed"/>
            <Button
                android:id="@+id/mButtonX"
                android:layout_width="35dp"
                android:layout_height="44dp"
                android:text="X"
                android:onClick="letterPressed"/>
            <Button
                android:id="@+id/mButtonY"
                android:layout_width="35dp"
                android:layout_height="44dp"
                android:text="Y"
                android:onClick="letterPressed"/>
            <Button
                android:id="@+id/mButtonZ"
                android:layout_width="35dp"
                android:layout_height="44dp"
                android:text="Z"
                android:onClick="letterPressed"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>